@@ -83,7 +83,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>1.5</version>
                 <configuration>
                     <includes>
                         <include>**/*.java</include>
@@ -103,13 +102,13 @@
             <id>eclipselink2</id>
             <activation>
                 <property>
-                    <name>jpaSpec</name>
-                    <value>eclipselink2</value>
+                    <name>!jpaSpec</name>
                 </property>
             </activation>
 
             <properties>
                 <jpa.provider.class>org.eclipse.persistence.jpa.PersistenceProvider</jpa.provider.class>
+                <surefire.argLine>-javaagent:${basedir}/target/eclipselink.jar -Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m</surefire.argLine>
             </properties>
 
             <dependencyManagement>
@@ -123,7 +122,7 @@
                     <dependency>
                         <groupId>org.eclipse.persistence</groupId>
                         <artifactId>eclipselink</artifactId>
-                        <version>2.5.0</version>
+                        <version>${org.eclipse.persistence.version}</version>
                         <scope>provided</scope>
                     </dependency>
                 </dependencies>
@@ -140,6 +139,38 @@
                     <scope>provided</scope>
                 </dependency>
             </dependencies>
+
+            <build>
+                <plugins>
+                    <!--
+                        Use the dependency plugin to copy the EclipseLink runtime
+                        to the target directory.
+                    -->
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.eclipse.persistence</groupId>
+                                            <artifactId>eclipselink</artifactId>
+                                            <version>${org.eclipse.persistence.version}</version>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                            <destFileName>eclipselink.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
@@ -260,7 +291,8 @@
 
             <activation>
                 <property>
-                    <name>!jpaSpec</name>
+                    <name>jpaSpec</name>
+                    <value>openjpa2</value>
                 </property>
             </activation>
 
